# akwan

./: CMakeLists.txt  README.md  test.bat  test.sh
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
docs/: README.md  akwan.ebnf  vm.md
examples/: add.akw  arith.akw  array.akw  assign.akw  block.akw  hello.akw  inout.akw  range.akw  type.akw
include/: akwan.h
include/akwan/: array.h  buffer.h  chunk.h  common.h  compiler.h  dump.h  error.h  function.h  lexer.h  memory.h  native.h  range.h  stack.h  string.h  value.h  vector.h  vm.h
src/: array.c  buffer.c  chunk.c  compiler.c  dump.c  error.c  function.c  lexer.c  main.c  memory.c  native.c  range.c  string.c  value.c  vm.c
